дз 9 черновик