@@ -1,37 +1,51 @@
 package ru.otus.jdbc.mapper;
 
+import ru.otus.core.repository.DataTemplate;
+import ru.otus.core.repository.DataTemplateException;
+import ru.otus.core.repository.executor.DbExecutor;
+import ru.otus.crm.model.Client;
+
+import java.lang.reflect.Field;
+import java.lang.reflect.InvocationTargetException;
 import java.sql.Connection;
 import java.sql.SQLException;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
-import ru.otus.core.repository.DataTemplate;
-import ru.otus.core.repository.DataTemplateException;
-import ru.otus.core.repository.executor.DbExecutor;
-import ru.otus.crm.model.Client;
 
-/** Сохратяет объект в базу, читает объект из базы */
+/**
+ * Сохратяет объект в базу, читает объект из базы
+ */
 @SuppressWarnings("java:S1068")
 public class DataTemplateJdbc<T> implements DataTemplate<T> {
 
     private final DbExecutor dbExecutor;
     private final EntitySQLMetaData entitySQLMetaData;
+    private final EntityClassMetaData<T> entityClassMetaData;
 
-    public DataTemplateJdbc(DbExecutor dbExecutor, EntitySQLMetaData entitySQLMetaData) {
+    public DataTemplateJdbc(DbExecutor dbExecutor, EntitySQLMetaData entitySQLMetaData, EntityClassMetaData<T> entityClassMetaData) {
         this.dbExecutor = dbExecutor;
         this.entitySQLMetaData = entitySQLMetaData;
+        this.entityClassMetaData = entityClassMetaData;
     }
 
     @Override
     public Optional<T> findById(Connection connection, long id) {
+        var fields = entityClassMetaData.getAllFields().stream().map(Field::getName).toList();
         dbExecutor.executeSelect(connection, entitySQLMetaData.getSelectByIdSql(), List.of(id), rs -> {
             try {
                 if (rs.next()) {
-                    return new Client(rs.getLong("id"), rs.getString("name"));
+                    var params = new ArrayList<>();
+                    for (var field : fields) {
+                        params.add(rs.getObject(field));
+                    }
+                    // ??? нужен другой конструктор
+                    return entityClassMetaData.getConstructor().newInstance(params);
                 }
                 return null;
-            } catch (SQLException e) {
+            } catch (SQLException | NoSuchMethodException | InstantiationException | IllegalAccessException |
+                     InvocationTargetException e) {
                 throw new DataTemplateException(e);
             }
         });
@@ -40,26 +54,40 @@ public class DataTemplateJdbc<T> implements DataTemplate<T> {
 
     @Override
     public List<T> findAll(Connection connection) {
-//        return dbExecutor.executeSelect(connection, entitySQLMetaData.getSelectAllSql(), Collections.emptyList(), rs -> {
-//                    var clientList = new ArrayList<Client>();
-//                    try {
-//                        while (rs.next()) {
-//                            clientList.add(new Client(rs.getLong("id"), rs.getString("name")));
-//                        }
-//                        return clientList;
-//                    } catch (SQLException e) {
-//                        throw new DataTemplateException(e);
-//                    }
-//                })
-//                .orElseThrow(() -> new RuntimeException("Unexpected error"));
-        return List.of();
+        var fields = entityClassMetaData.getAllFields().stream().map(Field::getName).toList();
+        return dbExecutor.executeSelect(connection, entitySQLMetaData.getSelectAllSql(), Collections.emptyList(), rs -> {
+                    var clientList = new ArrayList<T>();
+                    try {
+                        while (rs.next()) {
+                            var params = new ArrayList<>();
+                            for (var field : fields) {
+                                params.add(rs.getObject(field));
+                            }
+                            clientList.add(entityClassMetaData.getConstructor().newInstance(params));
+                        }
+                        return clientList;
+                    } catch (SQLException | NoSuchMethodException | InstantiationException | IllegalAccessException |
+                             InvocationTargetException e) {
+                        throw new DataTemplateException(e);
+                    }
+                })
+                .orElseThrow(() -> new RuntimeException("Unexpected error"));
     }
 
     @Override
     public long insert(Connection connection, T client) {
-         try {
-            return dbExecutor.executeStatement(
-                    connection, entitySQLMetaData.getInsertSql(), Collections.singletonList(client));
+        var params = new ArrayList<>();
+        var fieldsWithoutId = entityClassMetaData.getFieldsWithoutId();
+        for (var f : fieldsWithoutId) {
+            try {
+                f.setAccessible(true);
+                params.add(f.get(client));
+            } catch (IllegalAccessException e) {
+                throw new RuntimeException(e);
+            }
+        }
+        try {
+            return dbExecutor.executeStatement(connection, entitySQLMetaData.getInsertSql(), params);
         } catch (Exception e) {
             throw new DataTemplateException(e);
         }
